--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     
         <section class="texto__principal">
-            <h1>Túnel do Tempo 3ºC</h1>
+            <h1>Túnel do Tempo - richard</h1>
            
         </section>
     </section>
