--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
     <section class="imagem"></section>
     <section class="texto">
         <img src="logo__tulipa.png" alt="flor" class="secundario__imagem">
-        <h1>1º Trimestre</h1>
+        <h1>1ºANO</h1>
         <p>
         </p>
     </section>
     <section class="imagem"></section>
     <section class="texto">
         <img src="logo__tulipa.png" alt="flor" class="secundario__imagem">
-        <h1>2º Trimestre</h1>
+        <h1>2ºANO</h1>
         <p>
         </p>
     </section>
     <section class="imagem"></section>
     <section class="texto">
         <img src="logo__tulipa.png" alt="flor" class="secundario__imagem">
-        <h1>3º Trimestre</h1>
+        <h1>3ºANO</h1>
         <p>
         </p>
     </section>
