--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <section class="imagem"></section>
     <section class="texto">
-        <img src="logo__tulipa.png" alt="flor" class="secundario__imagem">
+        <img src="image.png" alt="flor" class="secundario__imagem">
         <h1>1ºANO</h1>
         <p>
         </p>
