--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
     <section class="imagem"></section>
     <section class="texto">
-        <img src="logo__tulipa.png" alt="flor" class="secundario__imagem">
+        <img src="image copy.png" alt="flor" class="secundario__imagem">
         <h1>2ºANO</h1>
         <p>
         </p>
