--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <section class="imagem"></section>
     <section class="texto">
-        <img src="logo__tulipa.png" alt="flor" class="secundario__imagem">
+        <img src="image copy 2.png" alt="flor" class="secundario__imagem">
         <h1>3ºANO</h1>
         <p>
         </p>
