--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
     <section class="imagem"></section>
     <section class="texto">
         <img src="image.png" alt="ano bom" class="secundario__imagem">
-        <h1>1ºANO</h1>
+        <h1>1ºANO, ano bom, boas amizades, bem nos esportess</h1>
         <p>
         </p>
     </section>
     <section class="imagem"></section>
     <section class="texto">
-        <img src="image copy.png" alt="flor" class="secundario__imagem">
+        <img src="image copy.png" alt="ano otimo" class="secundario__imagem">
         <h1>2ºANO</h1>
         <p>
         </p>
     </section>
     <section class="imagem"></section>
     <section class="texto">
-        <img src="image copy 2.png" alt="flor" class="secundario__imagem">
+        <img src="image copy 2.png" alt="ano realista" class="secundario__imagem">
         <h1>3ºANO</h1>
         <p>
         </p>
