--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="imagem"></section>
     <section class="texto">
         <img src="image copy.png" alt="ano otimo" class="secundario__imagem">
-        <h1>2ºANO</h1>
+        <h1>2ºANO, muitas viagens, amizades verdadeiras, melhor jogador de tenis de mesa 2023</h1>
         <p>
         </p>
     </section>
