--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="imagem"></section>
     <section class="texto">
         <img src="image copy 2.png" alt="ano realista" class="secundario__imagem">
-        <h1>3ºANO</h1>
+        <h1>3ºANO, ano em que valorizamos as amizades VERDADEIRAS e que tem palavra</h1>
         <p>
         </p>
     </section>
